[project]
name = "nina-titiler"
version = "0.0.1"
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
dependencies = [
    "titiler-application>=0.21.1",
    "uvicorn",
    "matplotlib",
    "titiler-extensions[cogeo]",
    "rio-tiler",
    "scipy",
    "opencv-python",
    "walrus"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
    "jupyterlab>=4.1.0",
    "ipdb>=0.13.13",
]

