[project]
name = "nina-titiler"
version = "0.0.1"
description = ""
authors = [{ name = "Niccolò Cantù", email = "niccolo.cantu@nina.no" }]
dependencies = [
    "titiler-application==0.24.2",
    "uvicorn",
    "matplotlib",
    "titiler-extensions[cogeo]",
    "rio-tiler",
    "opencv-python",
    "walrus",
    "duckdb>=1.4.1",
    "morecantile>=6.2.0",
    "fastapi[standard]>=0.115.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.7",
    "jupyterlab>=4.1.0",
    "ipdb>=0.13.13",
    "scipy",
]
